--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,121 +33,139 @@
           <div class="header-actions">
             <button
               id="themeToggle"
-              class="theme-toggle"
-              aria-label="Cambia tema"
+              class="btn btn-icon"
+              title="Attiva/Disattiva Tema Scuro"
             >
               <i class="fas fa-moon"></i>
-              <span class="toggle-label">Tema</span>
+            </button>
+            <button
+              id="btnAddVehicle"
+              class="btn btn-primary"
+              title="Aggiungi un nuovo veicolo"
+            >
+              <i class="fas fa-plus"></i> Veicolo
             </button>
           </div>
         </div>
       </div>
     </header>
 
-    <main class="container">
-      <div class="stats-grid">
+    <main class="container main-content">
+      <section id="stats-section" class="stats-section">
         <div class="stat-card">
-          <div class="stat-content">
-            <div class="stat-info">
-              <p class="stat-label" id="totalVehiclesLabel">Veicoli Totali</p>
-              <p class="stat-value" id="totalVehicles">0</p>
-            </div>
-            <div class="stat-icon stat-icon-blue">
-              <i class="fas fa-car"></i>
-            </div>
+          <div class="stat-icon stat-icon-blue">
+            <i class="fas fa-car"></i>
+          </div>
+          <div class="stat-info">
+            <p class="stat-value" id="totalVehicles">0</p>
+            <p class="stat-label" id="totalVehiclesLabel">Veicoli Totali</p>
           </div>
         </div>
-
         <div class="stat-card">
-          <div class="stat-content">
-            <div class="stat-info">
-              <p class="stat-label" id="totalMaintenancesLabel">Manutenzioni</p>
-              <p class="stat-value" id="totalMaintenances">0</p>
-            </div>
-            <div class="stat-icon stat-icon-green">
-              <i class="fas fa-bell"></i>
-            </div>
+          <div class="stat-icon stat-icon-green">
+            <i class="fas fa-tools"></i>
+          </div>
+          <div class="stat-info">
+            <p class="stat-value" id="totalMaintenances">0</p>
+            <p class="stat-label" id="totalMaintenancesLabel">Manutenzioni</p>
           </div>
         </div>
-
         <div class="stat-card">
-          <div class="stat-content">
-            <div class="stat-info">
-              <p class="stat-label" id="activeAlertsLabel">Scadenze Attive</p>
-              <p class="stat-value" id="activeAlerts">0</p>
-            </div>
-            <div class="stat-icon stat-icon-red" id="alertsIcon">
-              <i class="fas fa-exclamation-triangle"></i>
-            </div>
+          <div class="stat-icon stat-icon-gray" id="alertsIcon">
+            <i class="fas fa-exclamation-triangle"></i>
+          </div>
+          <div class="stat-info">
+            <p class="stat-value" id="activeAlerts">0</p>
+            <p class="stat-label" id="activeAlertsLabel">Scadenze Attive</p>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div id="alertsSection" class="alerts-section" style="display: none">
-        <div class="section-header">
-          <i class="fas fa-exclamation-triangle alert-icon"></i>
-          <h2>Scadenze in Arrivo</h2>
+      <section id="alertsSection" class="alerts-section" style="display: none">
+        <h2><i class="fas fa-bell"></i> Avvisi in Scadenza</h2>
+        <div id="alertsContainer" class="alerts-container">
+          </div>
+      </section>
+
+      <section id="vehicle-list-section">
+        <div id="emptyState" class="empty-state" style="display: none">
+          <i class="fas fa-car-crash"></i>
+          <h2>Nessun veicolo trovato</h2>
+          <p>
+            Aggiungi il tuo primo veicolo per iniziare a tracciare le
+            manutenzioni.
+          </p>
+          <button id="btnAddVehicleEmpty" class="btn btn-primary btn-large">
+            <i class="fas fa-plus"></i> Aggiungi Veicolo
+          </button>
         </div>
-        <div id="alertsContainer"></div>
-      </div>
-
-      <div class="vehicles-section-header">
-        <h2>I Tuoi Veicoli</h2>
-        <button class="btn btn-primary" id="btnAddVehicle">
-          <i class="fas fa-plus"></i>
-          Aggiungi Veicolo
-        </button>
-      </div>
-
-      <div id="vehiclesContainer" class="vehicles-grid"></div>
-
-      <div id="emptyState" class="empty-state">
-        <i class="fas fa-car empty-icon"></i>
-        <h3>Nessun veicolo</h3>
-        <p>Inizia aggiungendo il tuo primo veicolo</p>
-        <button class="btn btn-primary" id="btnAddVehicleEmpty">
-          <i class="fas fa-plus"></i>
-          Aggiungi Veicolo
-        </button>
-      </div>
+        <div id="vehiclesContainer" class="vehicles-container">
+          </div>
+      </section>
     </main>
 
     <div id="dialogAddVehicle" class="dialog-overlay">
       <div class="dialog">
         <div class="dialog-header">
           <h3 id="dialogAddVehicleTitle">Aggiungi Nuovo Veicolo</h3>
+          <button
+            type="button"
+            class="close-button"
+            id="btnCancelAddVehicle"
+          >
+            <i class="fas fa-times"></i>
+          </button>
         </div>
         <form id="formAddVehicle">
           <div class="dialog-body">
             <div class="form-group">
               <label for="brand">Marca</label>
-              <input type="text" id="brand" placeholder="es. Fiat" required />
+              <input
+                type="text"
+                id="brand"
+                placeholder="Es. Ford"
+                required
+              />
             </div>
-
             <div class="form-group">
               <label for="model">Modello</label>
-              <input type="text" id="model" placeholder="es. Panda" required />
+              <input
+                type="text"
+                id="model"
+                placeholder="Es. Fiesta"
+                required
+              />
             </div>
-
             <div class="form-group">
               <label for="plate">Targa</label>
               <input
                 type="text"
                 id="plate"
-                placeholder="es. AB123CD"
+                placeholder="Es. AA123BB"
                 required
               />
             </div>
-
             <div class="form-row">
               <div class="form-group">
                 <label for="year">Anno</label>
-                <input type="number" id="year" placeholder="2020" required />
+                <input
+                  type="number"
+                  id="year"
+                  placeholder="Es. 2018"
+                  min="1900"
+                  max="2099"
+                  required
+                />
               </div>
-
               <div class="form-group">
-                <label for="currentKm">Km Attuali</label>
-                <input type="number" id="currentKm" placeholder="50000" />
+                <label for="currentKm">KM Attuali</label>
+                <input
+                  type="number"
+                  id="currentKm"
+                  placeholder="Es. 120000"
+                  min="0"
+                  required
+                />
               </div>
             </div>
           </div>
@@ -159,9 +177,77 @@
             >
               Annulla
             </button>
-            <button type="submit" class="btn btn-primary">Salva Veicolo</button>
+            <button type="submit" class="btn btn-primary">Salva</button>
           </div>
         </form>
+      </div>
+    </div>
+
+    <div id="dialogVehicleDetails" class="dialog-overlay">
+      <div class="dialog dialog-details">
+        <div class="dialog-header">
+          <div>
+            <h3 id="detailsVehicleName"></h3>
+            <p class="dialog-subtitle" id="detailsVehicleInfo"></p>
+          </div>
+          <button
+            type="button"
+            class="close-button"
+            id="btnCloseDetails"
+          >
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+
+        <div class="dialog-body">
+          <div class="details-stats">
+            <div class="form-group km-update-group">
+              <label for="updateKm"
+                >KM Attuali (Aggiorna rapidamente)</label
+              >
+              <div class="km-input-row">
+                <input
+                  type="number"
+                  id="updateKm"
+                  placeholder="Nuovi KM"
+                  min="0"
+                />
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  id="btnUpdateKm"
+                >
+                  Aggiorna
+                </button>
+              </div>
+            </div>
+            <div class="details-actions">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                id="btnEditVehicleFromDetails"
+              >
+                <i class="fas fa-pencil-alt"></i> Modifica Veicolo
+              </button>
+            </div>
+          </div>
+
+          <h4 style="margin-top: 1.5rem">
+            Lista Manutenzioni <span id="maintenanceCount"></span>
+          </h4>
+          <div class="list-actions">
+            <button
+              type="button"
+              class="btn btn-success btn-sm"
+              id="btnAddMaintenanceFromDetails"
+            >
+              <i class="fas fa-plus"></i> Nuova Manutenzione
+            </button>
+          </div>
+
+          <div id="maintenancesList" class="maintenance-list-details">
+            </div>
+        </div>
       </div>
     </div>
 
@@ -170,34 +256,30 @@
         <div class="dialog-header">
           <h3>Aggiungi Manutenzione</h3>
           <p class="dialog-subtitle" id="maintenanceVehicleInfo"></p>
+          <button
+            type="button"
+            class="close-button"
+            id="btnCancelAddMaintenance"
+          >
+            <i class="fas fa-times"></i>
+          </button>
         </div>
-        <form id="formAddMaintenance" class="dialog-content-form">
+        <form id="formAddMaintenance">
           <div class="dialog-body">
             <div class="form-group">
-              <label for="type">Tipo Manutenzione</label>
-              <select id="type" required>
-                <option value="">Seleziona tipo</option>
-                <option value="Collaudo">Collaudo</option>
-                <option value="Cambio Olio">Cambio Olio</option>
-                <option value="Tagliando">Tagliando</option>
-                <option value="Revisione">Revisione</option>
-                <option value="Cambio Gomme">Cambio Gomme</option>
-                <option value="Frizione">Frizione</option>
-                <option value="Freni">Freni</option>
-                <option value="Filtri">Filtri</option>
-                <option value="Controllo">Controllo</option>
-                <option value="Altro">Altro</option>
-              </select>
+              <label for="type">Tipo di Manutenzione</label>
+              <select id="type" required></select>
             </div>
+            <div class="form-row">
+              <div class="form-group">
+                <label for="dueDate">Data di Scadenza</label>
+                <input type="date" id="dueDate" />
+              </div>
 
-            <div class="form-group">
-              <label for="dueDate">Data Scadenza</label>
-              <input type="date" id="dueDate" required />
-            </div>
-
-            <div class="form-group">
-              <label for="dueKm">Km Scadenza (opzionale)</label>
-              <input type="number" id="dueKm" placeholder="es. 60000" />
+              <div class="form-group">
+                <label for="dueKm">Km di Scadenza</label>
+                <input type="number" id="dueKm" placeholder="es. 60000" />
+              </div>
             </div>
 
             <div class="form-group">
@@ -215,7 +297,11 @@
 
             <div class="form-group">
               <label for="notes">Note (opzionale)</label>
-              <input type="text" id="notes" placeholder="Aggiungi note..." />
+              <input
+                type="text"
+                id="notes"
+                placeholder="Aggiungi note..."
+              />
             </div>
           </div>
           <div class="dialog-footer">
@@ -226,95 +312,61 @@
             >
               Annulla
             </button>
-            <button type="submit" class="btn btn-primary">
-              Salva Manutenzione
-            </button>
+            <button type="submit" class="btn btn-primary">Salva</button>
           </div>
         </form>
-      </div>
-    </div>
-
-    <div id="dialogVehicleDetails" class="dialog-overlay">
-      <div class="dialog dialog-large">
-        <div class="dialog-header">
-          <h3 id="detailsVehicleName"></h3>
-          <p class="dialog-subtitle" id="detailsVehicleInfo"></p>
-        </div>
-        <div class="dialog-body">
-          <div class="card update-km-card">
-            <label for="updateKm">Aggiorna Chilometraggio</label>
-            <div class="update-km-controls">
-              <input type="number" id="updateKm" class="update-km-input" />
-              <button class="btn btn-primary" id="btnUpdateKm">Aggiorna</button>
-            </div>
-          </div>
-
-          <div class="maintenances-list-section">
-            <h3>
-              Manutenzioni Programmate <span id="maintenanceCount"></span>
-            </h3>
-            <div id="maintenancesList"></div>
-          </div>
-        </div>
-        <div class="dialog-footer">
-          <button class="btn btn-primary" id="btnEditVehicleFromDetails">
-            <i class="fas fa-pencil-alt"></i> Modifica Veicolo
-          </button>
-          <button class="btn btn-primary" id="btnAddMaintenanceFromDetails">
-            <i class="fas fa-plus"></i> Aggiungi Manutenzione
-          </button>
-          <button class="btn btn-secondary" id="btnCloseDetails">Chiudi</button>
-        </div>
       </div>
     </div>
 
     <div id="dialogEditMaintenance" class="dialog-overlay">
       <div class="dialog">
         <div class="dialog-header">
-          <h3>Modifica Manutenzione</h3>
+          <h3 id="editMaintenanceTitle">Modifica Manutenzione</h3>
+          <p class="dialog-subtitle" id="editMaintenanceVehicleInfo"></p>
+          <button
+            type="button"
+            class="close-button"
+            id="btnCancelEditMaintenance"
+          >
+            <i class="fas fa-times"></i>
+          </button>
         </div>
-        <form id="formEditMaintenance" class="dialog-content-form">
+        <form id="formEditMaintenance">
           <div class="dialog-body">
             <div class="form-group">
               <label for="editType">Tipo di Manutenzione</label>
-              <select id="editType" required>
-                <option value="">Seleziona tipo</option>
-                <option value="Collaudo">Collaudo</option>
-                <option value="Cambio Olio">Cambio Olio</option>
-                <option value="Tagliando">Tagliando</option>
-                <option value="Revisione">Revisione</option>
-                <option value="Cambio Gomme">Cambio Gomme</option>
-                <option value="Frizione">Frizione</option>
-                <option value="Freni">Freni</option>
-                <option value="Filtri">Filtri</option>
-                <option value="Controllo">Controllo</option>
-                <option value="Altro">Altro</option>
-              </select>
+              <select id="editType" required></select>
+            </div>
+            <div class="form-row">
+              <div class="form-group">
+                <label for="editDueDate">Data di Scadenza</label>
+                <input type="date" id="editDueDate" />
+              </div>
+
+              <div class="form-group">
+                <label for="editDueKm">Km di Scadenza</label>
+                <input type="number" id="editDueKm" placeholder="es. 60000" />
+              </div>
             </div>
 
             <div class="form-group">
-              <label for="editDueDate">Data Scadenza</label>
-              <input type="date" id="editDueDate" required />
-            </div>
-
-            <div class="form-group">
-              <label for="editDueKm">Chilometraggio Scadenza (opzionale)</label>
-              <input type="number" id="editDueKm" placeholder="Es. 150000" />
-            </div>
-
-            <div class="form-group">
-              <label for="editNotifyDaysBefore">Giorni di preavviso</label>
-              <input type="number" id="editNotifyDaysBefore" value="7" />
-            </div>
-
-            <div class="form-group form-group-checkbox">
-              <input type="checkbox" id="editCompleted" />
-              <label
-                for="editCompleted"
-                style="display: inline-block; margin-left: 10px"
-                >Manutenzione Completata</label
+              <label for="editNotifyDaysBefore"
+                >Avvisa con (giorni di anticipo)</label
               >
+              <input
+                type="number"
+                id="editNotifyDaysBefore"
+                value="7"
+                min="1"
+                required
+              />
             </div>
+
+            <div class="form-group-checkbox">
+              <input type="checkbox" id="editCompleted" />
+              <label for="editCompleted">Manutenzione Completata</label>
+            </div>
+
             <div class="form-group">
               <label for="editNotes">Note (opzionale)</label>
               <input
