--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,7 @@
 
   <!-- MODAL: ADD VEHICLE -->
   <div id="dialogAddVehicle" class="modal">
-    <div class="modal-overlay" onclick="document.getElementById('btnCancelAddVehicle').click()"></div>
+    <div class="modal-overlay"></div>
     <div class="modal-content modal-medium">
       <div class="modal-header">
         <h3 id="dialogAddVehicleTitle">Aggiungi Nuovo Veicolo</h3>
@@ -170,7 +170,7 @@
 
   <!-- MODAL: VEHICLE DETAILS -->
   <div id="dialogVehicleDetails" class="modal">
-    <div class="modal-overlay" onclick="document.getElementById('btnCloseDetails').click()"></div>
+    <div class="modal-overlay"></div>
     <div class="modal-content modal-large">
       <div class="modal-header">
         <div>
@@ -223,7 +223,7 @@
 
   <!-- MODAL: ADD MAINTENANCE -->
   <div id="dialogAddMaintenance" class="modal">
-    <div class="modal-overlay" onclick="document.getElementById('btnCancelAddMaintenance').click()"></div>
+    <div class="modal-overlay"></div>
     <div class="modal-content modal-medium">
       <div class="modal-header">
         <div>
@@ -282,7 +282,7 @@
 
   <!-- MODAL: EDIT MAINTENANCE -->
   <div id="dialogEditMaintenance" class="modal">
-    <div class="modal-overlay" onclick="document.getElementById('btnCancelEditMaintenance').click()"></div>
+    <div class="modal-overlay"></div>
     <div class="modal-content modal-medium">
       <div class="modal-header">
         <div>
@@ -340,7 +340,7 @@
 
   <!-- MODAL: CONFIRM -->
   <div id="dialogConfirm" class="modal">
-    <div class="modal-overlay" onclick="document.getElementById('btnCloseConfirm').click()"></div>
+    <div class="modal-overlay"></div>
     <div class="modal-content modal-small">
       <div class="modal-header">
         <h3 id="confirmDialogTitle">Conferma Azione</h3>
@@ -360,7 +360,7 @@
 
   <!-- MODAL: ALERT -->
   <div id="dialogAlert" class="modal">
-    <div class="modal-overlay" onclick="document.getElementById('btnCloseAlert').click()"></div>
+    <div class="modal-overlay"></div>
     <div class="modal-content modal-small">
       <div class="modal-header">
         <h3 id="alertDialogTitle">Attenzione</h3>
